...
  isOpen,
  onClose,
  title,
  message,
  description,
  cancelLabel = 'Cancel',
  confirmLabel = 'Confirm',
  onConfirm,
  isLoading = false,
  type = 'default',
}: TPAlertProps) {
  return (
    <Modal
...
