...
          </span>
          <span>2 hours</span>
        </div>
      </Block>

      <Block className="!mt-2">
        <p className="text-sm text-typography-600 font-medium">Periods (5)</p>
      </Block>

      <List mediaList inset>
        <ListItem
          title="Warm Up"
          subtitle="9:00 AM - 9:15 AM"
...
