...
    [router, setAnnouncementsSelectedAnnouncement]
  );

  if (isLoading) {
    return (
      <>
        <Stack.Screen options={{ title: 'Announcements' }} />
        <View className="flex-1 bg-background-200 items-center justify-center">
          <ActivityIndicator size="large" color={COLORS.primary} />
        </View>
      </>
    );
  }
...

        <TPFooterButtons
          mode="view"
          onCancel={() => router.back()}
          onEdit={handleAddAnnouncement}
          cancelLabel="Close"
          editLabel="Add Announcement"
          canEdit={true}
        />
      </View>
    </>
  );
}
...
